--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ social:
   - title: instagram 
     url: http://instagram.com/dorkyturtle
   - title: github
-    url: http://github.com/dorkyturtle
+    url: http://github.com/heatherloomis
 
 # Build settings
 # theme: minima
@@ -75,3 +75,6 @@ social:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+exclude:
+  - .vscode/
